--- a/style.css
+++ b/style.css
@@ -1,66 +1,13 @@
-body{
-     font-family: Arial, sans-serif;
+body {
+    font-family: Arial, sans-serif;
     text-align: center;
 }
-#container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    text-align:center;
-    
-}
-h1{
- color:#333;   
-}
-.countdown {
+
+.countdown-container {
     margin-top: 50px;
 }
-.kutu1{
-    padding: 10px;
-    background-color: chartreuse;
-    border:1px solid black;
-    width:50%;
-    box-shadow: 10px 10px 10px black;
+
+#countdown {
+    font-size: 24px;
 }
-.kutu2{
-    padding: 10px;
-    background-color: blueviolet;
-    border:1px solid black;
-    width:50%;
-    box-shadow: 10px 10px 10px black;
-}
-.kutu3{
-    padding: 10px;
-    background-color: cadetblue;
-    border:1px solid black;
-    width:50%;
-    box-shadow: 10px 10px 10px black;
-}
-.kutu4{
-    padding: 10px;
-    background-color: chocolate;
-    border:1px solid black;
-    width:50%;
-    box-shadow: 10px 10px 10px black;
-}
-.kutu5{
-    padding: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color:bisque;
-    border:1px solid black;
-    width:50%;
-    box-shadow: 10px 10px 10px black;    
-}
-.inputText{
-    width: 50px;
-}
-.kutu7{
-    padding: 10px;
-    background-color:blue;
-    border:1px solid black;
-    width:50%;
-    box-shadow: 10px 10px 10px black;   
-}
+
